--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,11 @@
 @tailwind utilities;
 
 body{
-    background-color: black;
+    background-image: url('assets/images/cover.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
 
 /* navbar styles */
@@ -17,7 +21,7 @@ body{
 }
 
 .dropdown_menu.open {
-    height: 300px;
+    height: 240px;
 }
 
 /* RESPONSIVE DESIGN */
