Feature: Update index page with hero section, social media buttons, and About Me section
- Added hero section with tagline and introductory text.
- Implemented social media buttons for easy access.
- Developed the "About Me" section with detailed description.

--- a/styles.css
+++ b/styles.css
@@ -38,4 +38,21 @@ body{
     .dropdown_menu{
         display: block;
     }
+
+    .about-me{
+        flex-direction: column;
+    }
+
+    .about-me .content{
+        padding-left: 0;
+        padding-right: 0;
+        align-items: center;
+        text-align: center;
+    }
+
+    .about-me .img{
+        padding-top: 10px;
+        height: 300px;
+        width: 300px;
+    }
 }
