--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,8 @@ body{
 /* RESPONSIVE DESIGN */
 
 @media (max-width:992px){
+
+    /* navbar styles */
     .navbar .links{
         display: none;
     }
@@ -39,6 +41,9 @@ body{
         display: block;
     }
 
+
+
+    /* about me styles */
     .about-me{
         flex-direction: column;
     }
@@ -54,5 +59,58 @@ body{
         padding-top: 10px;
         height: 300px;
         width: 300px;
+    }
+
+    .about-me .content .buttons{
+        align-items: center;
+        justify-content: center;
+        font-size: smaller;
+    }
+
+
+
+    /* services styles */
+    .services .content h1{
+        font-size: 2rem;
+        text-align: center;
+        padding-left: 0;
+    }
+
+    .services .content p{
+        text-align: center;
+        padding-left: 0;
+    }
+
+    .services .content .grid{
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+        grid-template-rows: repeat(2, minmax(0, 1fr));
+        padding-left: 0;
+    }
+
+
+}
+
+@media(max-width:550px){
+    
+    /* about me styles */
+    .about-me .content .buttons{
+        align-items: center;
+        justify-content: center;
+        font-size: smaller;
+    }
+
+    .about-me .content .buttons a{
+        padding-left: 0.25rem;
+        padding-right: 0.25rem;
+        padding-top: 0.375rem;
+        padding-bottom: 0.375rem;
+    }
+
+
+    /* services styles */
+    .services .content .grid{
+        grid-template-columns: repeat(1, minmax(0, 1fr));
+        grid-template-rows: repeat(4, minmax(0, 1fr));
+        padding-left: 0;
     }
 }
