--- a/styles.css
+++ b/styles.css
@@ -61,14 +61,24 @@ body{
         width: 300px;
     }
 
-    .about-me .content .buttons{
-        align-items: center;
-        justify-content: center;
-        font-size: smaller;
+
+    /* highlight styles */
+    .portfolio-highlights{
+        flex-direction: column;
     }
 
+    .portfolio-highlights .content{
+        text-align: center;
+        padding-left: 2%;
+        padding-right: 2%;
+    }
 
+    .portfolio-highlights .content h1{
+        letter-spacing: normal;
+        font-size: 1.8rem;
+    }
 
+    
     /* services styles */
     .services .content h1{
         font-size: 2rem;
@@ -86,6 +96,8 @@ body{
         grid-template-rows: repeat(2, minmax(0, 1fr));
         padding-left: 0;
     }
+
+
 
 
 }
